src/test/ui/feature-gate-generators.stderr
error[E0658]: yield syntax is experimental
  --> $DIR/feature-gate-generators.rs:12:5
   |
12 |     yield true; //~ ERROR yield syntax is experimental
   |     ^^^^^^^^^^
   |
   = help: add #![feature(generators)] to the crate attributes to enable

error: aborting due to previous error

